--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #050713;
+  background-color: #1D2947;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -53,7 +53,7 @@ button:focus {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #2d1950;
+  background: #1D2947;
 }
 
 /* Handle */
